# ambf_control_system

./: .CMakeLists.txt  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.user.12f7e35  CMakeLists.txt.user.49ca9a4  README.md  ambf_control_system.h.in  main.cpp
PCH/src/: pch.cpp
Sandbox/: CMakeLists.txt
Sandbox/src/: SandboxApp.cpp
Sway/: CMakeLists.txt  Sway.h
Sway/PCH/include/PCH/: pch.h
Sway/PCH/src/: pch.cpp
Sway/include/Sway/: Application.h  EntryPoint.h  Log.h
Sway/src/: Application.cpp  Log.cpp
Tests/: CMakeLists.txt
Tests/ECMTests/include/ECMTests/: ECM.h  ECM2.h  ECM3.h  ECMMannualCalculations.h
Tests/ECMTests/src/: ECM2.cc  ECM2KinematicsTests.cc  ECM3KinematicsTests.cc  ECMKinematicsTests.cc  ECMMannualCalculations.cc
Tests/KUKATests/include/KUKATests/: KUKA.h
Tests/KUKATests/src/: KUKAKinematicsTests.cc  KinematicsTests.cc
Tests/PSMTests/include/PSMTests/: PSM.h
Tests/PSMTests/src/: PSMKinematicsTests.cc
Tests/ReferenceTests/src/: BodyTests.cc  CalcAccelerationsTests.cc  CalcVelocitiesTests.cc  CompositeRigidBodyTests.cc  ContactsTests.cc  CustomConstraintsTests.cc  CustomJointMultiBodyTests.cc  CustomJointSingleBodyTests.cc  CustomJointTests.cc  DynamicsTests.cc  ErrorTests.cc  FloatingBaseTests.cc  ForwardDynamicsConstraintsExternalForces.cc  ImpulsesTests.cc  InverseDynamicsTests.cc  InverseDynamicsWithConstraintsTests.cc  InverseKinematicsTests.cc  KinematicsTests.cc  LoopConstraintsTests.cc  MathTests.cc  ModelTests.cc  MultiDofTests.cc  ScrewJointTests.cc  SparseFactorizationTests.cc  SpatialAlgebraTests.cc  TwolegModelTests.cc  UtilsTests.cc
Tests/include/Tests/: Utilities.h  rbdl_tests.h
Tests/src/: Utilities.cpp  main.cc
ambf_control_system/: CMakeLists.txt  package.xml
application/: CMakeLists.txt  package.xml
application/include/application/: AMBFParamWrapper.h  AMBFWrapper.h  Prep.h  Utilities.h
application/src/: AMBFParamWrapper.cpp  AMBFParams.cpp  AMBFWrapper.cpp  Prep.cpp  RBDLModelErrors.cpp  Utilities.cpp
build-debug/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build-debug/atomic_configure/: .rosinstall  setup.sh
build-debug/catkin_generated/: generate_cached_setup.py  setup_cached.sh
build-debug/controller_modules/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-debug/devel/: .catkin  local_setup.sh
build-debug/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-debug/rbdl_model/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-debug/rbdl_model_tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-debug/rbdl_server/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cmake/: FindAMBFClient.cmake  Findambf_client.cmake  Findapplication.cmake  ambf_clientConfig.cmake  ambf_msgs-genmsg.cmake  ambf_msgs-msg-extras.cmake  ambf_msgsConfig.cmake  applicationConfig.cmake
controller_modules/: CMakeLists.txt  package.xml
controller_modules/include/controller_modules/: ControllerBase.h  ControllerManager.h  GravityCompensationController.h  ModelController.h  PDController.h  SMCController.h  TaskSpaceController.h
controller_modules/src/: ControllerManager.cpp  GravityCompensationController.cpp  ModelController.cpp  PDController.cpp  SMCController.cpp  TaskSpaceController.cpp
controller_modules_test/: CMakeLists.txt
rbdl_model/: CMakeLists.txt  package.xml
rbdl_model/include/rbdl_model/: BodyParam.h  BuildRBDLModel.h  GraphEdge.h  JointParam.h  MinHeap.h  MinHeapStructs.h  ModelGraph.h  ModelStructs.h  ParseADF.h  RBDLModelErrors.h  RBDLUtilities.h  Utilities.h
rbdl_model/src/: AMBFParams.cpp  BodyParam.cpp  BuildRBDLModel.cpp  JointParam.cpp  MinHeap.cpp  ModelGraph.cpp  ParseADF.cpp  RBDLModelErrors.cpp  RBDLUtilities.cpp  Utilities.cpp  main.cpp
rbdl_model_test/: CMakeLists.txt  package.xml
rbdl_model_test/include/rbdl_model_test/: PsmBodyTests.h  RBDLBodyTests.h  rbdl_model_test.h
rbdl_model_test/src/: PsmBodyTests.cpp  RBDLBodyTests.cpp  main.cpp  rbdl_model_test.cpp
rbdl_model_tests/: CMakeLists.txt  package.xml
rbdl_model_tests/include/rbdl_model_tests/: AMBFParams.h  DynamicTesting.h  ECM.h  ECMCL.h  EigenUtilities.h  KUKA.h  Kuka.h  PS.h  ParallelStructure.h  ParallelStructureCL.h  RBDLBodyTests.h  RBDLTestPrep.h  rbdl_tests.h
rbdl_model_tests/include/rbdl_model_tests/ModelFromParser/: RBDLModelFromAutomation.h  TestCaseStruct.h
rbdl_model_tests/src/: AMBFParams.cpp  ECM.cpp  ECMBodyTests.cc  ECMCL.cpp  ECMCLHCKinematicsTests.cc  ECMCalculations.cc  ECMHCKinematicsTests.cc  ECMRBDLCL.cc  ECMRBDLCLV.cc  ECM_.cc  EigenUtilities.cpp  KUKA.cpp  KUKABodyTests.cc  KUKATBD.cpp  KukaBodyTests.cc  KukaHCDynamicsTests.cc  KukaHCKinematicsTests.cc  KukaHCKinematicsTestsTBD.cc  KukaKinematicsTests.cc  PS.cpp  PSBodyTests.cc  PSHCKinematicsTests.cc  ParallelStructureBodyTest.cc  ParallelStructureCLHCKinematicsTests.cc  ParallelStructureHCKinematicsTests.cc  RBDLBodyTests.cpp  RBDLJointTests.cpp  RBDLJointTests.cpp.autosave  RBDLTestPrep.cc  RBDLTestPrep.cpp  RotationTestCases.cc  main.cc  main.cpp  tempDyn.cpp
rbdl_model_tests/src/ModelFromParser/: KUKA.cc  RBDLModelFromAutomation.cpp  RBDLModelTestCases.cc
rbdl_server/: CMakeLists.txt  package.xml
rbdl_server/include/rbdl_server/: RBDLServer.h
rbdl_server/src/: RBDLServer.cpp  main.cpp  rbdl_server_node.cpp
rbdl_server/srv/: RBDLBodyNames.srv  RBDLForwardDynamics.srv  RBDLInverseDynamics.srv  RBDLInverseKinimatics.srv  RBDLJacobian.srv  RBDLJointSpaceInertia.srv  RBDLKinimatics.srv  RBDLModel.srv  RBDLModelAlignment.srv  RBDLNonlinearEffects.srv  RBDLPointVelocity.srv  RBDLTaskSpaceBody.srv
scripts/: 00-setup.sh  01-build.sh  01-buildAndMake.sh  01-configure.sh  02-build.sh  02-make.sh  02-run.sh  03-run_ECM2Tests_app.sh  03-run_ECM3Tests_app.sh  03-run_ECMManualCalculationsTests_app.sh  03-run_ECMTests_app.sh  03-run_KUKATests_app.sh  03-run_PSMTests_app.sh  03-run_ReferenceTests_app.sh  03-run_Sandbox_app.sh  03-run_tests_app.sh
tests/: CMakeLists.txt  main.cc
trajectory_generator/: CMakeLists.txt
(+266 files in other folders)
