<?xml version="1.0"?>
<package format="2">
  <name>ambf_control_system</name>
    <maintainer email="shreyas@todo.todo">shreyas</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
  <version>2.5.0</version>
  <description>
    This metapackage depends on the SMACH library and ROS SMACH integration
    packages.
  </description>


  <buildtool_depend>catkin</buildtool_depend>
    <exec_depend>rbdl_server</exec_depend>
  <exec_depend>control_modules</exec_depend>
  <exec_depend>rbdl_model</exec_depend>


  <export>
    <metapackage/>
  </export>
</package>
